@@ -11,6 +11,7 @@ import com.example.nolo.entities.item.Phone;
 import com.example.nolo.enums.CategoryType;
 import com.example.nolo.enums.CollectionPath;
 import com.example.nolo.repositories.RepositoryExpiredTime;
+import com.example.nolo.util.TimeToLiveToken;
 import com.google.android.gms.tasks.OnCompleteListener;
 import com.google.android.gms.tasks.Task;
 import com.google.firebase.firestore.FirebaseFirestore;
@@ -18,6 +19,7 @@ import com.google.firebase.firestore.QueryDocumentSnapshot;
 import com.google.firebase.firestore.QuerySnapshot;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -30,24 +32,22 @@ import java.util.function.Consumer;
 public class ItemsRepository implements IItemsRepository {
     private static ItemsRepository itemsRepository = null;
     private final FirebaseFirestore db;
-    private final List<IItem> allItemsRepo, laptopsRepo, phonesRepo, accessoriesRepo;
-    private long lastLoadedTime;
+    private List<IItem> allItemsRepo, laptopsRepo, phonesRepo, accessoriesRepo;
+    private final TimeToLiveToken timeToLiveToken;
     private final Set<CategoryType> loadableCategoryItems, loadedCategoryItems;
 
     private ItemsRepository() {
         db = FirebaseFirestore.getInstance();
-        allItemsRepo = new ArrayList<>();
-        laptopsRepo = new ArrayList<>();
-        phonesRepo = new ArrayList<>();
-        accessoriesRepo = new ArrayList<>();
-        lastLoadedTime = 0;
-        loadableCategoryItems = new HashSet<>(List.of(
-                CategoryType.laptops, CategoryType.phones, CategoryType.accessories
+        timeToLiveToken = new TimeToLiveToken(RepositoryExpiredTime.TIME_LIMIT);
+        loadableCategoryItems = new HashSet<>(Arrays.asList(
+                CategoryType.laptops,
+                CategoryType.phones,
+                CategoryType.accessories
         ));
         loadedCategoryItems = new HashSet<>();
     }
 
-    /*
+    /**
      * This is for singleton class.
      */
     public static ItemsRepository getInstance() {
@@ -57,23 +57,20 @@ public class ItemsRepository implements IItemsRepository {
         return itemsRepository;
     }
 
-    /*
+    /**
      * Reload data from Firebase if the cached data is outdated/expired.
      */
     private void reloadItemsIfExpired() {
-        if (System.currentTimeMillis() - lastLoadedTime > RepositoryExpiredTime.TIME_LIMIT)
+        if (timeToLiveToken.hasExpired())
             loadItems(a -> {});
     }
 
-    /*
+    /**
      * Load Laptop from Firebase.
      */
-    private void loadLaptopsRepo(Consumer<Class<?>> loadedRepository, BiConsumer<Consumer<Class<?>>, CategoryType> loadedLaptopsRepo) {
-        laptopsRepo.clear();
+    private void loadLaptopsRepo(Consumer<Class<?>> onLoadedRepository, BiConsumer<Consumer<Class<?>>, CategoryType> onLoadedLaptopsRepo) {
+        laptopsRepo = new ArrayList<>();
 
-        /*
-         * Laptop
-         */
         db.collection(CollectionPath.laptops.name()).get().addOnCompleteListener(new OnCompleteListener<QuerySnapshot>() {
             @Override
             public void onComplete(@NonNull Task<QuerySnapshot> task) {
@@ -96,20 +93,17 @@ public class ItemsRepository implements IItemsRepository {
                 }
 
                 // inform laptops repository finished loading
-                loadedLaptopsRepo.accept(loadedRepository, CategoryType.laptops);
+                onLoadedLaptopsRepo.accept(onLoadedRepository, CategoryType.laptops);
             }
         });
     }
 
-    /*
+    /**
      * Load Phone from Firebase.
      */
-    private void loadPhonesRepo(Consumer<Class<?>> loadedRepository, BiConsumer<Consumer<Class<?>>, CategoryType> loadedPhonesRepo) {
-        phonesRepo.clear();
+    private void loadPhonesRepo(Consumer<Class<?>> onLoadedRepository, BiConsumer<Consumer<Class<?>>, CategoryType> onLoadedPhonesRepo) {
+        phonesRepo = new ArrayList<>();
 
-        /*
-         * Phone
-         */
         db.collection(CollectionPath.phones.name()).get().addOnCompleteListener(new OnCompleteListener<QuerySnapshot>() {
             @Override
             public void onComplete(@NonNull Task<QuerySnapshot> task) {
@@ -132,20 +126,17 @@ public class ItemsRepository implements IItemsRepository {
                 }
 
                 // inform phones repository finished loading
-                loadedPhonesRepo.accept(loadedRepository, CategoryType.phones);
+                onLoadedPhonesRepo.accept(onLoadedRepository, CategoryType.phones);
             }
         });
     }
 
-    /*
+    /**
      * Load Accessory from Firebase.
      */
-    private void loadAccessoriesRepo(Consumer<Class<?>> loadedRepository, BiConsumer<Consumer<Class<?>>, CategoryType> loadedAccessoriesRepo) {
-        accessoriesRepo.clear();
+    private void loadAccessoriesRepo(Consumer<Class<?>> onLoadedRepository, BiConsumer<Consumer<Class<?>>, CategoryType> onLoadedAccessoriesRepo) {
+        accessoriesRepo = new ArrayList<>();
 
-        /*
-         * Accessory
-         */
         db.collection(CollectionPath.accessories.name()).get().addOnCompleteListener(new OnCompleteListener<QuerySnapshot>() {
             @Override
             public void onComplete(@NonNull Task<QuerySnapshot> task) {
@@ -168,18 +159,18 @@ public class ItemsRepository implements IItemsRepository {
                 }
 
                 // inform this accessories finished loading
-                loadedAccessoriesRepo.accept(loadedRepository, CategoryType.accessories);
+                onLoadedAccessoriesRepo.accept(onLoadedRepository, CategoryType.accessories);
             }
         });
     }
 
-    /*
+    /**
      * When all items repository are loaded, inform that it is done
      */
-    private void onLoadItemsRepoCacheComplete(Consumer<Class<?>> loadedRepository, CategoryType itemCategory) {
+    private void onLoadItemsRepoCacheComplete(Consumer<Class<?>> onLoadedRepository, CategoryType itemCategory) {
         loadedCategoryItems.add(itemCategory);
 
-        if (loadedRepository.equals(loadableCategoryItems)) {
+        if (loadedCategoryItems.equals(loadableCategoryItems)) {
             Log.i("Load Items From Firebase", "Success");
 
             allItemsRepo.addAll(laptopsRepo);
@@ -187,22 +178,22 @@ public class ItemsRepository implements IItemsRepository {
             allItemsRepo.addAll(accessoriesRepo);
 
             // inform Items repository finished loading
-            loadedRepository.accept(ItemsRepository.class);
+            onLoadedRepository.accept(ItemsRepository.class);
         }
     }
 
-    /*
+    /**
      * Load data from Firebase.
      */
     @Override
-    public void loadItems(Consumer<Class<?>> loadedRepository) {
-        allItemsRepo.clear();
+    public void loadItems(Consumer<Class<?>> onLoadedRepository) {
+        allItemsRepo = new ArrayList<>();
         loadedCategoryItems.clear();
-        lastLoadedTime = System.currentTimeMillis();
+        timeToLiveToken.reset();
 
-        loadLaptopsRepo(loadedRepository, this::onLoadItemsRepoCacheComplete);
-        loadPhonesRepo(loadedRepository, this::onLoadItemsRepoCacheComplete);
-        loadAccessoriesRepo(loadedRepository, this::onLoadItemsRepoCacheComplete);
+        loadLaptopsRepo(onLoadedRepository, this::onLoadItemsRepoCacheComplete);
+        loadPhonesRepo(onLoadedRepository, this::onLoadItemsRepoCacheComplete);
+        loadAccessoriesRepo(onLoadedRepository, this::onLoadItemsRepoCacheComplete);
     }
 
     @Override
@@ -212,6 +203,13 @@ public class ItemsRepository implements IItemsRepository {
         return allItemsRepo;
     }
 
+    /**
+     * Get Item entity by item ID
+     *
+     * @param itemId item ID
+     * @return Item entity if itemId exists;
+     *         Otherwise null
+     */
     @Override
     public IItem getItemById(String itemId) {
         IItem result = null;
@@ -226,20 +224,61 @@ public class ItemsRepository implements IItemsRepository {
         return result;
     }
 
+    /**
+     * Get list of Items by list of item IDs.
+     * Convert list of Item IDs to list of Item entities
+     *
+     * @param itemIds List of item IDs
+     * @return List of Item entities
+     */
     @Override
-    public List<IItem> getCategoryItems(CategoryType categoryType) {
-        switch (categoryType) {
-            case laptops:
-                return laptopsRepo;
-            case phones:
-                return phonesRepo;
-            case accessories:
-                return accessoriesRepo;
-            default:
-                return null;
+    public List<IItem> getItemByIdList(List<String> itemIds) {
+        List<IItem> result = new ArrayList<>();
+
+        for (IItem item : allItemsRepo) {
+            if (itemIds.contains(item.getItemId())) {
+                result.add(item);
+            }
         }
+
+        reloadItemsIfExpired();
+        return result;
     }
 
+    /**
+     * Get list of Items by a specific Category Type
+     *
+     * @param categoryType Specific Category Type
+     * @return List of Items if categoryType exists;
+     *         Otherwise empty list
+     */
+    @Override
+    public List<IItem> getCategoryItems(CategoryType categoryType) {
+        List<IItem> result = new ArrayList<>();
+
+        switch (categoryType) {
+            case laptops:
+                result = laptopsRepo;
+                break;
+            case phones:
+                result = phonesRepo;
+                break;
+            case accessories:
+                result = accessoriesRepo;
+                break;
+        }
+
+        reloadItemsIfExpired();
+        return result;
+    }
+
+    /**
+     * Get list of Items by the search terms
+     *
+     * @param searchTerm Search terms
+     * @return List of Items if Items' names contain search term;
+     *         Otherwise empty list
+     */
     @Override
     public List<IItem> getSearchSuggestions(String searchTerm) {
         List<IItem> result = new ArrayList<>();
@@ -251,5 +290,16 @@ public class ItemsRepository implements IItemsRepository {
 
         reloadItemsIfExpired();
         return result;
+    }
+
+    /**
+     * Get list of Accessory entities that are recommended of a specific Item
+     *
+     * @param itemId Specific Item ID
+     * @return List of Accessory entities
+     */
+    @Override
+    public List<IItem> getAccessRecommendationsByItemId(String itemId) {
+        return getItemByIdList(getItemById(itemId).getRecommendedAccessoryIds());
     }
 }
